--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "waypoints": "^4.0.1"
   }
 }
